--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1>Creek Service</h1>
+
+{% for repository in site.github.public_repositories %}
+  * [{{ repository.name }}]({{ repository.html_url }})
+{% endfor %}
